[gd_scene load_steps=25 format=2]

[ext_resource path="res://Fredoka-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Hug Activity/HUD_HugActivity.gd" type="Script" id=2]
[ext_resource path="res://RainbowActivity/Next Button.png" type="Texture" id=3]
[ext_resource path="res://RainbowActivity/Heart Not Pressed.png" type="Texture" id=4]
[ext_resource path="res://BubblePop/CounterBG.png" type="Texture" id=5]
[ext_resource path="res://Hug Activity/TilliHug.png" type="Texture" id=6]
[ext_resource path="res://Hug Activity/Self Hug 1 Audio.mp3" type="AudioStream" id=7]
[ext_resource path="res://Hug Activity/Self Hug BG Audio.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=4]
size = 180
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 1024, 512, 512 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD_HugActivity" type="CanvasLayer"]
layer = -1
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.960784, 0.654902, 0.733333, 1 )

[node name="StartingInstuction" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 237.0
margin_right = 214.0
margin_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Give yourself a 
BIG hug"
align = 1
valign = 1

[node name="ChangeInstructionsTimer" type="Timer" parent="StartingInstuction"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Continue" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -448.0
margin_top = 1683.0
margin_right = 221.0
margin_bottom = 1828.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Tap to continue"
align = 1
valign = 1

[node name="Next" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -315.0
margin_top = -249.0
margin_right = -95.0
margin_bottom = -79.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )

[node name="TimerBG" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 239.0
margin_top = 635.0
margin_right = 689.0
margin_bottom = 1085.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="TimeLeft" type="Label" parent="TimerBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -109.5
margin_right = 102.0
margin_bottom = 109.5
grow_horizontal = 0
grow_vertical = 0
theme = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "20"
align = 1
valign = 1

[node name="TilliHugging" type="AnimatedSprite" parent="."]
position = Vector2( 540, 1017 )
scale = Vector2( 2.23438, 2.23438 )
z_index = 1
frames = SubResource( 16 )

[node name="LoveSymbol" type="AnimatedSprite" parent="."]
position = Vector2( 540, 846.5 )
scale = Vector2( 2.6345, 2.85374 )
frames = SubResource( 17 )

[node name="HugYourselfDialogue" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="StartingTimer" type="Timer" parent="HugYourselfDialogue"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="HuggingBG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 6.0

[connection signal="timeout" from="StartingInstuction/ChangeInstructionsTimer" to="." method="_on_ChangeInstructionsTimer_timeout"]
[connection signal="button_down" from="Next" to="." method="_on_Next_button_down"]
[connection signal="timeout" from="HugYourselfDialogue/StartingTimer" to="." method="_on_StartingTimer_timeout"]
